# HI35XX-Simplified

./: .gitignore  ArmelToolchain.cmake  CMakeLists.txt  HI3516CV500-SDK.7z  README.md  main.cpp
Include/: audio.h  media_system.h  mpp_types.h  mpp_utils.h  video_processor.h
Include/video_codec/: video_encoder.h
Include/video_input/: video_channel.h  video_device.h  video_input.h  video_isp.h  video_pipe.h
Source/: audio.cpp  media_system.cpp  mpp_utils.cpp
Source/video_codec/: video_encoder.cpp
Source/video_input/: video_channel.cpp  video_device.cpp  video_isp.cpp  video_pipe.cpp
